[project]
name = "webhost-automation"
version = "0.2.0"
description = "A tool to automate shared hosting and WordPress management via cPanel UAPI or Browser Automation."
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "requests>=2.31.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "playwright>=1.40.0"
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["webhost_automation"]
